k8sapps/k8s-cluster-deploy/k8s_ing_multi_paths_deploy/hello_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hello-ingress
  name: hello-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-ingress
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-ingress
    spec:
      containers:
      - image: gcr.io/google-samples/hello-app:2.0
        name: hello-ingress
        ports:
        - containerPort: 8080
        resources: {}
status: {}
