k8sapps/k8s-cluster-deploy/k8s_ing_multi_paths_deploy/hello_headless_svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-ingress
  name: hello-ingress
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  clusterIP: None # set headless
  selector:
    app: hello-ingress
status:
  loadBalancer: {}
