k8sapps/k8s-cluster-deploy/k8s_ing_multi_paths_deploy/nginx_ingress_v16.yaml
# Create by ZhengJin, at 2020-9-26 (k8s version=1.16.4)
#
# Note: if minikube, check "ingress" addons is enabled
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-demo
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: k8s.ingressdemo.com
    http:
      paths:
      - path: /echo
        backend:
          serviceName: echo-ingress
          servicePort: 8080
      # default
      - path: /
        backend:
          serviceName: hello-ingress
          servicePort: 8080
